[package]
name = "xalen-ayanamsa"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "40+ ayanamsa (sidereal precession) systems for XALEN Ephemeris"
keywords = ["ayanamsa", "sidereal", "precession", "lahiri", "vedic"]
categories = ["science", "mathematics"]

[dependencies]
xalen-time = { version = "0.6.0", path = "../xalen-time" }
xalen-coords = { version = "0.6.0", path = "../xalen-coords" }
xalen-stars = { version = "0.6.0", path = "../xalen-stars" }
serde.workspace = true

[lints]
workspace = true
